# LBMProject

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/C/: CMakeLists.txt
src/C/C_operations/: CMakeLists.txt  biasedGradient.c  biasedGradient.h  lbstream.c  lbstream.h  matVecMult.c  matVecMult.h  stringHash.c  stringHash.h
src/C/IO/: CMakeLists.txt  vtkInfo.h  writePdfToVTK.c  writePdfToVTK.h  writeScalarToVTK.c  writeScalarToVTK.h  writeVTKExtra.c  writeVTKExtra.h  writeVTKFile.c  writeVTKFile.h  writeVectorToVTK.c  writeVectorToVTK.h
src/C/MPI_Sync/: CMakeLists.txt  syncPdfField.c  syncPdfField.h  syncScalarField.c  syncScalarField.h
src/C/boundary/: CMakeLists.txt  adiabatic.c  adiabatic.h  bounceBack.c  bounceBack.h  fixedT.c  fixedT.h  fixedU.c  randomT.c  randomT.h  tSpot.c  tSpot.h  updateBC.c  updateBC.h  updateBoundaryDens.c  updateBoundaryDens.h  updateBoundaryT.c  updateBoundaryT.h  updateBoundaryVel.c  updateBoundaryVel.h
src/IO/: CMakeLists.txt  dictionary.C  dictionary.h  readBasicInfo.C  readBasicInfo.h  readScalarField.C  readScalarField.h  vtkPatchWriter.C  vtkPatchWriter.h
src/IO/C_IO/: IOOptions.h  readBasicInfo.C  readBasicInfo.h  readBoundaryConditions.C  readBoundaryConditions.h  readBoundaryElements.C  readBoundaryElements.h  readEOSInfo.C  readEOSInfo.h  readLatticeInfo.C  readLatticeInfo.h  readLatticeMesh.C  readLatticeMesh.h  readLbeField.C  readLbeField.h  readLiModelInfo.C  readLiModelInfo.h  readMPIInfo.C  readMPIInfo.h  readNeighbours.C  readNeighbours.h  readPdfField.C  readPdfField.h  readScalarEntry.C  readScalarEntry.h  readScalarField.C  readScalarField.h  readTimeInfo.C  readTimeInfo.h  readVTKInfo.C  readVTKInfo.h  readVectorField.C  readVectorField.h  timeOptions.C  timeOptions.h  writePdfField.C  writePdfField.h  writeScalarField.C  writeScalarField.h  writeVectorField.C  (+1 more)
src/LBModel/: CMakeLists.txt  D2Q4.C  D2Q4.h  D2Q5.C  D2Q5.h  D2Q9.C  D3Q7.C  D3Q7.h  basicLBModel.C  basicLBModel.h
src/applications/: CMakeLists.txt
src/applications/fields/: CMakeLists.txt
src/applications/mesh/: CMakeLists.txt
src/applications/solvers/: CMakeLists.txt
src/basic/: CMakeLists.txt
src/basic/dataTypes/: EOSInfo.h  Matrix.C  Matrix.h  Vector3.C  Vector3.h  basicSolverInfo.h  bdInfo.h  latticeInfo.h  latticeMesh.h  mpiInfo.h  pdf.C  pdf.h  scalars.h  scalars_C.h  timeInfo.h  twoPhasesFields.h
src/basic/distributed/: IOPatch.h  basicPatch.h  basicPatch_iterator.h  boundaryPatch.h  commPatch.h  lbPatch.h  lbPatch_iterator.h  mpiPatch.h  patch.h  testPatch.h
src/fields/: CMakeLists.txt  latticeField.h
src/fields/latticePdfFields/: latticePdfField.C  latticePdfField.h  latticePdfField_iterator.h
src/fields/latticeScalarFields/: latticeScalarField.C  latticeScalarField.h  latticeScalarField_iterator.h
src/fields/latticeVectorFields/: latticeVectorField.C  latticeVectorField.h  latticeVectorField_iterator.h
src/geometry/: CMakeLists.txt
src/geometry/fields/: fieldShape.C  fieldShape.h
src/geometry/shapes/: basicShape.C  basicShape.h  box.C  box.h  bubble.C  bubble.h  cylinder.C  cylinder.h  periodicBox.C  periodicBox.h  polyShapes.C  polyShapes.h  profileBox.C  profileBox.h  semiPeriodicBox.C  semiPeriodicBox.h  shapesCreator.C  shapesCreator.h  sphere.C  sphere.h
src/guardar/: twoPhasesFields.h
src/guardar/C_IO/: readBasicInfo.C  readNeighbours.C  readNeighbours.h  readPdfField.h
src/guardar/lbe/: CMakeLists.txt  cahnHilliardEquilibrium.c  cahnHilliardSource.h  gradient.c  liangEquilibrium.c
src/guardar/solvers/: CMakeLists.txt
src/lbe/: CMakeLists.txt  cahnHilliardCollision.c  cahnHilliardCollision.h  cahnHilliardEquilibrium.c  cahnHilliardEquilibrium.h  cahnHilliardSource.c  cahnHilliardSource.h  chemicalPotential.c  chemicalPotential.h  density.c  density.h  gradient.c  gradient.h  laplacian.c  laplacian.h  lbstream.c  lbstream.h  liangCollision.c  liangCollision.h  liangEquilibrium.c  liangEquilibrium.h  liangSource.c  liangSource.h  liangTotalForce.c  liangTotalForce.h  matVecMult.c  orderParameter.c  orderParameter.h  pressureWithU.c  pressureWithU.h  scalarFieldGradient.c  scalarFieldGradient.h  scalarFieldLaplacian.c  scalarFieldLaplacian.h  swap.c  swap.h  syncPdfField.c  syncPdfField.h  syncScalarField.c  syncScalarField.h  (+2 more)
src/lbe/basic/: CMakeLists.txt  basicDensity.c  basicDensity.h  basicVelocity.c  basicVelocity.h  collision.c  collision.h  equilibrium.c  equilibrium.h  lbeField.h  lbgkEquilibrium_id.c  lbgkEquilibrium_id.h  lbgkTEquilibrium.c  lbgkTEquilibrium.h  lbgkTEquilibrium_id.c  lbgkTEquilibrium_id.h  macroDensity.c  macroDensity.h  macroTemperature.c  macroTemperature.h  macroVelocity.c  macroVelocity.h  updateBoundaries.c  updateBoundaries.h  updateBoundaryElements.c  updateBoundaryElements.h  updateTau.c
src/lbe/liModel/: CMakeLists.txt  guoSRTCollision.c  guoSRTCollision.h  interactionForce.c  interactionForce.h  lbgkEquilibrium.c  liCollision.c  liDensity.c  liDensity_local.c  liDensity_local.h  liEquilibrium.c  liEquilibrium.h  liMRTCollision.c  liMRTForce.c  liMRTForce.h  liModelInfo.h  liSRTCollision.c  liSRTCollision.h  liTemperature_local.c  liTemperature_local.h  liVelocity.c  liVelocity_local.c  liVelocity_local.h  p_eos.c  p_eos.h  potential.c  potential.h  pseudoPotCollision.c  pseudoPotCollision.h  pseudoPotTemperature.c  pseudoPotTemperature.h  pseudoPotVelocity.c  pseudoPotVelocity.h  temperatureCollision.c  temperatureCollision.h  totalForce.c  totalForce.h
src/lbe/liangModel/: CMakeLists.txt  basicSolverInfo.h  cahnHilliardCollision.c  cahnHilliardSource.h  chemicalPotential.c  density.c  lbstream.c  liangCollision.c  liangEquilibrium.c  liangSource.c  liangSource.h  orderParameter.c  pressureWithU.c  scalarFieldGradient.c  syncPdfField.h  syncScalarField.c  velocity.c
src/test/: CMakeLists.txt  mpiTest.c  test1.C  test10.C  test11.C  test12.C  test13.C  test14.C  test15.C  test2.C  test3.C  test4.C  test5.C  test6.C  test7.C  test9.C
src/time/: CMakeLists.txt  Time.C  Time.h  basicTime.C  basicTime.h  fieldsTime.C  fieldsTime.h  writeTime.C  writeTime.h
(+418 files in other folders)
