# Basic library: dataTypes
add_subdirectory (basic)

# Lattice model library
add_subdirectory (LBModel)

# Input/output library
add_subdirectory (IO)

# Time library
add_subdirectory (time)

# Geometry library
add_subdirectory (geometry)

# Fields library
add_subdirectory (fields)



# Applications
add_subdirectory (applications)

# Tests
add_subdirectory (test)
