# Basic library: dataTypes
add_subdirectory (basic)

# Lattice model library
add_subdirectory (LBModel)

# Input/output library
add_subdirectory (IO)

# Time library
add_subdirectory (time)

# Geometry library
add_subdirectory (geometry)

# Fields library
add_subdirectory (fields)

# C library. Equilibirum, collision, streamming, etc
add_subdirectory (lbe)

# C library. Basic operations
add_subdirectory (C)



# Applications
add_subdirectory (applications)

# # Tests
# add_subdirectory (test)
